@@ -1,3 +1,10 @@
+lxqt-globalkeys-1.0.0 / 2021-11-04
+===================================
+ * Updated AUTHORS.
+ * Bumped minimum required Qt version to 5.15.
+ * Added shortcut filtering.
+ * Code cleanup.
+
 lxqt-globalkeys-0.17.0 / 2021-04-15
 ===================================
   * Completely moved to Qt5 signal/slot syntax.
